# EXIF-bot

./: .gitignore  README.md  pyproject.toml
src/bot/: main.py  utils.py
src/bot/exif_data/: __init__.py  exif_.py
src/bot/handlers/: user.py
src/bot/keyboards/: user.py
src/bot/options/: __init__.py  options_.py
src/bot/text/: __init__.py  messages.py  text_.py
