[tool.poetry]
name = "exif-bot"
version = "0.1.0"
description = ""
authors = ["'Etherial' <'test@test.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyexif = "^1.0.0"
aiogram = "^3.7.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
