[tool.poetry]
name = "exif-bot"
version = "0.1.0"
description = ""
authors = ["'Etherial' <'test@test.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
python-dotenv = "^1.0.1"
ruff = "^0.4.9"
exif = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
